<resources>
    <string name="app_name">AndroidWeather</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_reset">Reset</string>
    <string name="name">Name</string>
    <string name="temp">Current Temperature</string>
    <string name="tempMax">Maximum temperature</string>
    <string name="tempMin">Minimum temperature</string>
    <string name="description">Description</string>
    <string name="add">Add city</string>
    <string name="pickOnMap">Pick on a map</string>
</resources>
