<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.allan.androidweather.VilleDetailsFragment"
    tools:showIn="@layout/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">


    <!--<ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ville_placeholder"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:scaleType="fitCenter"
        android:layout_marginRight="16dp"
        android:id="@+id/imageView" />-->

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:scaleType="fitCenter"
        android:layout_marginRight="16dp"
        android:id="@+id/imageView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_alignParentRight="true">

        <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/ville_details_nom"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:text="@string/temp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/ville_details_temp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:text="@string/tempMax"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/ville_details_tempMax"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:text="@string/tempMin"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/ville_details_tempMin"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/ville_details_description"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

</RelativeLayout>